--- a/index.html
+++ b/index.html
@@ -19,33 +19,18 @@
         </span>
     </header>
     <main>
-        <article class="top">
-          <p>Color Selector</p>
-
-          <div>
-              <input type="color" id="head" name="head"
-                     value="#e66465">
-              <label for="head">Head</label>
-          </div>
-          
-          <div>
-              <input type="color" id="body" name="body"
-                      value="#f6b73c">
-              <label for="body">Body</label>
-          </div>
-          
-        </article>
-
         <article>
-          <label for="picked">Color:</label>
+          <label for="picked">Selected color:</label>
           <input type="color" id="picked" name="picked" value="#e66465">
 
           <section class="container-card">
             <div class="color-card">
              <div class="my-color"></div>
               <div class="card-info">
-                <div class="name">Mustard</div>
-                <div class="hexcode">#FFD151</div>
+                <div class="name">Color</div>
+                <p class="hexcode">HEX: #FFD151</p>
+                <p class="rgb">RGB:</p>
+                <p class="hsl">HSL:</p>
               </div>
             </div>
           </section>
