--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
              <div class="my-color"></div>
               <div class="card-info">
                 <div class="name">Color</div>
-                <p class="hexcode">HEX: #FFD151</p>
+                <p id="hexcode">HEX: #FFD151</p>
                 <p class="rgb">RGB:</p>
                 <p class="hsl">HSL:</p>
               </div>
